Port yang-parser-rfc7950 to JUnit 5
This is an openrewrite-based migration, augmented with conversion to
assertThrows()/assertInstanceOf().

Change-Id: I3960ebaa19a8647ee3e470f6007ff7713bd71c2b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>