@@ -7,52 +7,43 @@
  */
 package org.opendaylight.yangtools.yang.stmt;
 
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 import java.util.Iterator;
-import java.util.stream.Collectors;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.model.api.ContainerSchemaNode;
 import org.opendaylight.yangtools.yang.model.api.Status;
 import org.opendaylight.yangtools.yang.model.api.stmt.ContainerEffectiveStatement;
 import org.opendaylight.yangtools.yang.model.api.stmt.GroupingEffectiveStatement;
-import org.opendaylight.yangtools.yang.model.api.stmt.ModuleEffectiveStatement;
 
-public class Bug5101Test extends AbstractYangTest {
+class Bug5101Test extends AbstractYangTest {
     @Test
-    public void test() throws Exception {
-        final ModuleEffectiveStatement module = assertEffectiveModel("/bugs/bug5101.yang")
+    void test() throws Exception {
+        final var module = assertEffectiveModel("/bugs/bug5101.yang")
             .getModuleStatement(QName.create("foo", "2016-01-29", "foo"));
 
-        final ContainerEffectiveStatement myContainerInGrouping = module
+        final var myContainerInGrouping = module
             .findFirstEffectiveSubstatement(GroupingEffectiveStatement.class).orElseThrow()
-            .findFirstEffectiveSubstatement(ContainerEffectiveStatement.class).orElse(null);
-        assertThat(myContainerInGrouping, instanceOf(ContainerSchemaNode.class));
-        assertEquals(Status.DEPRECATED, ((ContainerSchemaNode) myContainerInGrouping).getStatus());
+            .findFirstEffectiveSubstatement(ContainerEffectiveStatement.class).orElseThrow();
+        assertEquals(Status.DEPRECATED, assertInstanceOf(ContainerSchemaNode.class, myContainerInGrouping).getStatus());
 
         // This relies on schema definition order
         final Iterator<ContainerEffectiveStatement> containers =
-            module.streamEffectiveSubstatements(ContainerEffectiveStatement.class)
-            .collect(Collectors.toList()).iterator();
+            module.streamEffectiveSubstatements(ContainerEffectiveStatement.class).toList().iterator();
 
         final ContainerEffectiveStatement root = containers.next();
-        assertThat(root, instanceOf(ContainerSchemaNode.class));
-        assertEquals(Status.CURRENT, ((ContainerSchemaNode) root).getStatus());
+        assertEquals(Status.CURRENT, assertInstanceOf(ContainerSchemaNode.class, root).getStatus());
 
         final ContainerEffectiveStatement rootMyContainer = root
             .streamEffectiveSubstatements(ContainerEffectiveStatement.class)
             .findAny().orElse(null);
-        assertThat(rootMyContainer, instanceOf(ContainerSchemaNode.class));
-        assertEquals(Status.DEPRECATED, ((ContainerSchemaNode) rootMyContainer).getStatus());
+        assertEquals(Status.DEPRECATED, assertInstanceOf(ContainerSchemaNode.class, rootMyContainer).getStatus());
 
         final ContainerEffectiveStatement myContainer = containers.next();
+        assertEquals(Status.DEPRECATED, assertInstanceOf(ContainerSchemaNode.class, myContainer).getStatus());
         assertFalse(containers.hasNext());
-        assertThat(myContainer, instanceOf(ContainerSchemaNode.class));
-        assertEquals(Status.DEPRECATED, ((ContainerSchemaNode) myContainer).getStatus());
-
     }
 }
